# localbricks

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.example.yaml  docker-compose.yaml  pyproject.toml
.jupyter/: container_no_proxy.py  ipython_config.py  jupyter_ai_config.py  jupyter_ai_disabled_config.py  jupyter_ai_disabled_routes.py  spark_proxy_opts.py  start-jupyter.sh
localbricks/: __init__.py  spark.py  startup.py
localbricks/pipelines/: __init__.py  runner.py
notebooks/: 01_localbricks_databricks_basics.ipynb  spark_delta_training_reference.md
pipelines/: example_pipeline.py
